[package]
name = "cdk-strike"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true # MSRV
description = "CDK ln backend for Strike"
readme = "README.md"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
cdk-common = { workspace = true, features = ["mint"] }
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
uuid.workspace = true
axum.workspace = true
# strike-rs = { path = "/Users/edward/rust/strike-rs" }
strike-rs = { git = "https://github.com/gudnuf/strike-rs.git", rev = "eb59400365122f13e3dc074618f0b4251252e02a"}
