[package]
name = "cdk-wasm-db"
version.workspace = true
edition.workspace = true
authors = ["CDK Developers"]
description = "WebAssembly SQLite storage backend for CDK"
license.workspace = true
homepage = "https://github.com/cashubtc/cdk"
repository = "https://github.com/cashubtc/cdk.git"
rust-version.workspace = true                            # MSRV
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["mint", "wallet", "auth"]
mint = ["cdk-common/mint"]
wallet = ["cdk-common/wallet"]
auth = ["cdk-common/auth"]
# Enable thread-safe storage even on WASM (useful for tests or multi-threaded WASM environments)
threadsafe = []

[dependencies]
# Core dependencies that work on both native and WASM
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Storage"] }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
getrandom = { version = "0.2", features = ["js"] }
sqlite-wasm-rs = { version = "0.4", default-features = false, features = ["precompiled"] }
# Minimal dependencies to avoid secp256k1 and other native deps
uuid = { version = "1.17", features = ["v4", "js", "serde"] }
url = "2.3"
cdk-common = { workspace = true }
cashu = { workspace = true }

# Native-specific dependencies (fallback to cdk-sqlite)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cdk-sqlite = { workspace = true }
cdk-common = { workspace = true, features = ["test"] }
bitcoin.workspace = true
cdk-sql-common = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]}
tracing.workspace = true
lightning-invoice.workspace = true
uuid.workspace = true
